- API: MultipleCDockables now also use placeholders. However, all placeholders for a MultipleCDockable are removed if the MultipleCDockable is closed (unless the MissingCDockableStrategy tells otherwise)
- Bugfix: ScreenDockStation and its strategies now properly support multi monitor environments. The default BoundaryRestriction is now "MEDIUM" instead of "FREE".

[v1.1.0p3]
 ! API: UIProperties now depend on an UIScheme. Basically the UIScheme is a self filling map and UIProperties acts as (mutable) cache. ColorScheme now depends on UIScheme and several methods that were related to ColorScheme got obsolete and were removed.
 - API: DockTheme is now managed by a specialized class ThemeManager and no longer by DockController.
 ! API: While the interface DockTheme was not changed, many of its methods should no longer be invoked directly. Instead the ThemeManager and the DockProperties should be used.
 - Bugfix: DefaultCControlRegister, adding a CContentArea did not have any effect.
 - Bugfix: changing properties like maximizeable of a CDockable did not update the actions
 - Bugfix: run FindBug and found some bugs of lesser importance
 - API: New interface BackgroundPaint allows clients to paint the background of the Components of this framework
 - Bugfix: several bugs related to perspectives
 - API: CGridPerspective now initializes its grid with content and support placeholders
 - API: New border "ScreenDockWindowBorder" for windows of a ScreenDockStation. The new border gives a visual feedback to the user whether he currently is hovering or dragging the window. Colors can be replaced throught the ColorManager, and the entire border can be replaced as well.
 - API: New interface BorderModifier allows clients to replace most of the borders of the framework (see also ThemeManager)
 - Bugfix: MediumBoundaryRestriction ensure that a window has a size of at least 100x50, this prevents a window from disappearing because it is too small